# imbalanced_project

./: .gitignore  README.md  pyproject.toml
data/processed/: test_data_processed.csv  test_features_processed.csv  train_data_processed.csv
data/test_data/: test_data.csv  test_labels.csv
data/train_data/: train_data.csv  train_labels.csv
notebooks/: informal.ipynb
reports/figures/: comparison_results.html
src/data/: preprocessing.py
src/features/: feature_engineering.py
src/models/: test_base_model.py  test_smote_model.py  train_base_model.py  train_smote_model.py
src/models/serialized/: baseline_model.pkl  smote_model.pkl
src/visualization/: results_comparison.py
